# ReX

./: .gitignore  Cargo.toml  LICENSE  README.md  make_samples.py
examples/: femtovg.rs  femtovg_pathfinder.rs  femtovg_ttf_parser.rs  font_femtovg.rs  font_pathfinder.rs  grid_sample.rs  gui_basic.rs  qc.rs  svg_basic.rs  ttfparser_cairo.rs  ttfparser_femtovg.rs  ttfparser_raqote.rs
perf/: stress_test.rs
src/: dimensions.rs  environments.rs  error.rs  functions.rs  geometry.rs  lexer.rs  lib.rs  macros.rs
src/dimensions/: units.rs
src/font/: backend.rs  common.rs  kerning.rs  mod.rs  style.rs
src/font/backend/: font.rs  ttf_parser.rs
src/layout/: builders.rs  constants.rs  convert.rs  engine.rs  kern.rs  mod.rs  spacing.rs
src/parser/: builders.rs  color.rs  control_sequence.rs  engine.rs  environments.rs  error.rs  functions.rs  lexer.rs  macros.rs  mod.rs  nodes.rs  symbols.rs  textoken.rs  utils.rs
src/parser/macros_test_files/: ok1.tex  ok2.tex
src/parser/snapshots/: rex__parser__tests__snapshot_accents-2.snap  rex__parser__tests__snapshot_accents-3.snap  rex__parser__tests__snapshot_accents-4.snap  rex__parser__tests__snapshot_accents-5.snap  rex__parser__tests__snapshot_accents-6.snap  rex__parser__tests__snapshot_accents-7.snap  rex__parser__tests__snapshot_accents.snap  rex__parser__tests__snapshot_array-10.snap  rex__parser__tests__snapshot_array-2.snap  rex__parser__tests__snapshot_array-3.snap  rex__parser__tests__snapshot_array-4.snap  rex__parser__tests__snapshot_array-5.snap  rex__parser__tests__snapshot_array-6.snap  rex__parser__tests__snapshot_array-7.snap  rex__parser__tests__snapshot_array-8.snap  rex__parser__tests__snapshot_array-9.snap  rex__parser__tests__snapshot_array.snap  rex__parser__tests__snapshot_atom_change-2.snap  rex__parser__tests__snapshot_atom_change-3.snap  rex__parser__tests__snapshot_atom_change.snap  rex__parser__tests__snapshot_color-10.snap  rex__parser__tests__snapshot_color-2.snap  rex__parser__tests__snapshot_color-3.snap  rex__parser__tests__snapshot_color-4.snap  rex__parser__tests__snapshot_color-5.snap  rex__parser__tests__snapshot_color-6.snap  rex__parser__tests__snapshot_color-7.snap  rex__parser__tests__snapshot_color-8.snap  rex__parser__tests__snapshot_color-9.snap  rex__parser__tests__snapshot_color.snap  rex__parser__tests__snapshot_delimited-10.snap  rex__parser__tests__snapshot_delimited-2.snap  rex__parser__tests__snapshot_delimited-3.snap  rex__parser__tests__snapshot_delimited-4.snap  rex__parser__tests__snapshot_delimited-5.snap  rex__parser__tests__snapshot_delimited-6.snap  rex__parser__tests__snapshot_delimited-7.snap  rex__parser__tests__snapshot_delimited-8.snap  rex__parser__tests__snapshot_delimited-9.snap  rex__parser__tests__snapshot_delimited.snap  (+117 more)
src/render/: bbox.rs  cairo.rs  femtovg.rs  mod.rs  pathfinder.rs  raqote.rs  scene.rs  tinyskia.rs
tests/: layout.rs  pass_fail.rs  render_regression.rs  tex_comparison.rs
tests/common/: debug_render.rs  equation_sample.rs  img_diff.rs  mod.rs  report.rs  svg.rs  svg_diff.rs  utils.rs
tests/data/: history.yaml  history_regression_render.yaml  layout.bincode  layout.yaml  passfail.yaml  regression_render.yaml  tex_comparison_samples.json
