[package]
name = "rex"
version = "0.1.2"
authors = [
    "Christopher Breeden <github@u.breeden.cc>",
    "Sebastian Köln <s3bk@protonmail.com>"
]
edition = "2018"

[features]
pathfinder-backend = ["dep:pathfinder_renderer", "dep:pathfinder_geometry", "dep:pathfinder_color", "dep:pathfinder_content", "dep:pathfinder_export"]
femtovg-backend    = ["dep:femtovg"]
ttfparser-backend  = ["dep:ttf-parser"]
fontcrate-backend  = ["dep:font", "dep:pathfinder_geometry", "dep:pathfinder_content", "dep:pathfinder_color", "dep:pathfinder_export"]

[[example]]
name = "font-pathfinder"
path = "examples/font_pathfinder.rs"

[[example]]
name = "femtovg-pathfinder"
path = "examples/femtovg_pathfinder.rs"


[[example]]
name = "femtovg-ttf-parser"
path = "examples/femtovg_ttf_parser.rs"


[dependencies]
pathfinder_geometry = { git = "https://github.com/servo/pathfinder/", optional = true }
pathfinder_color    = { git = "https://github.com/servo/pathfinder/", optional = true }
pathfinder_content  = { git = "https://github.com/servo/pathfinder/", optional = true }
pathfinder_export   = { git = "https://github.com/servo/pathfinder/", optional = true }
unicode-math = { git = "https://github.com/s3bk/unicode-math/" }
serde_derive = "1.0"
serde = "1.0"

[dependencies.font]
git = "https://github.com/pdf-rs/font"
features=["woff"]
optional = true

[dependencies.pathfinder_renderer]
git = "https://github.com/servo/pathfinder/"
optional = true

[dependencies.femtovg]
version = "*"
optional = true

[dependencies.ttf-parser]
version = "*"
optional = true


[dev-dependencies]
sdl2 = "*"
serde_yaml = "0.7"
bincode = "1.2.1"
env_logger = "*"

[dependencies.log]
version="0.4.8"
