[package]
name = "rex"
version = "0.1.2"
authors = [
    "Christopher Breeden <github@u.breeden.cc>",
    "Sebastian Köln <s3bk@protonmail.com>",
    "Keny C",
]
edition = "2018"

[features]
pathfinder-renderer   = ["dep:pathfinder_renderer", "dep:pathfinder_geometry", "dep:pathfinder_color", "dep:pathfinder_content", "dep:pathfinder_export"]
femtovg-renderer      = ["dep:femtovg"]
cairo-renderer        = ["dep:cairo-rs"]
raqote-renderer       = ["dep:raqote"]
ttfparser-fontparser  = ["dep:ttf-parser"]
fontrs-fontparser     = ["dep:font", "dep:pathfinder_geometry", "dep:pathfinder_content", "dep:pathfinder_color", "dep:pathfinder_export"]

[[example]]
name = "font-pathfinder"
path = "examples/font_pathfinder.rs"

[[example]]
name = "font-femtovg"
path = "examples/font_femtovg.rs"


[[example]]
name = "ttfparser-femtovg"
path = "examples/ttfparser_femtovg.rs"


[[example]]
name = "ttfparser-cairo"
path = "examples/ttfparser_cairo.rs"

[[example]]
name = "ttfparser-raqote"
path = "examples/ttfparser_raqote.rs"


[dependencies]
pathfinder_geometry = { git = "https://github.com/servo/pathfinder/", optional = true }
pathfinder_color    = { git = "https://github.com/servo/pathfinder/", optional = true }
pathfinder_content  = { git = "https://github.com/servo/pathfinder/", optional = true }
pathfinder_export   = { git = "https://github.com/servo/pathfinder/", optional = true }
cairo-rs = {version = "0.17.0", optional = true}
raqote   = {version = "0.8.2",  optional = true}
unicode-math = { path = "deps/unicode-math" }
serde_derive = "1.0"
serde = "1.0"

[dependencies.font]
git = "https://github.com/pdf-rs/font"
features=["woff"]
optional = true

[dependencies.pathfinder_renderer]
git = "https://github.com/servo/pathfinder/"
optional = true

[dependencies.femtovg]
version = "*"
optional = true

[dependencies.ttf-parser]
version = "*"
optional = true


[dev-dependencies]
sdl2 = "*"
serde_yaml = "0.7"
bincode = "1.2.1"
env_logger = "*"
cairo-rs = {version = "*", features = ["svg"]}

[dependencies.log]
version="0.4.8"
